--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,6 @@
 platform = teensy
 board = teensy40
 framework = arduino
+lib_deps = 
+	marcoschwartz/LiquidCrystal_I2C@^1.1.4
+	thomasfredericks/Bounce2@^2.57
