--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,12 @@ framework = arduino
 lib_deps = 
 	marcoschwartz/LiquidCrystal_I2C@^1.1.4
 	thomasfredericks/Bounce2@^2.57
+
+monitor_port = COM[7]
+monitor_speed = 115200
+upload_protocol = custom
+extra_scripts = upload_with_tycmd.py
+upload_port = 7982820-Teensy
+
+[platformio]
+description = Testing serial communication between MATLAB and Teensy
